--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
   <link rel="icon" href="dist/images/favicon.png" sizes="192x192" />
-  <link rel="stylesheet" href="/dist/style.css">
+  <link rel="stylesheet" href="dist/style.css">
   <title>শিল্পকেন্দ্রDIU</title>
 </head>
 
