--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
   <link rel="icon" href="dist/images/tikweb/favicon.ico" />
   <link rel="stylesheet" href="dist/style.css">
-  <title>শিল্পকেন্দ্রDIU</title>
+  <title>Tikweb Family</title>
 </head>
 
 <body>
